--- a/index.html
+++ b/index.html
@@ -38,18 +38,26 @@
         <div class="modal-dialog" role="document">
           <div class="modal-content">
             <div class="modal-header">
-              <h5 class="modal-title">Modal title</h5>
+              <h5 class="modal-title">Novo Cadastro</h5>
               <button type="button" class="close" data-dismiss="modal" aria-label="Close">
                 <span aria-hidden="true">&times;</span>
               </button>
             </div>
+            <form id="form_cadastro">
             <div class="modal-body">
-              <p>Modal body text goes here.</p>
+              <p class="alert alert-info">Preencha corretamente os dados</p>
+              <label for="nome">Nome:</label>
+              <input type="text" id="nome" class="form form-control form-control-md" required placeholder="digite seu nome">
+              <label for="email">Email:</label>
+              <input type="text" id="email" class="form form-control form-control-md" required placeholder="seuemail@email.com">
+              <label for="telefone">Telefone:</label>
+              <input type="text" id="telefone" class="form form-control form-control-md" required placeholder="(XX)XXXX-XXXX">
             </div>
             <div class="modal-footer">
-              <button type="button" class="btn btn-secondary" data-dismiss="modal">Close</button>
-              <button type="button" class="btn btn-primary">Save changes</button>
+              <button type="button" class="btn btn-secondary" data-dismiss="modal">Cancelar</button>
+              <button  class="btn btn-primary">Enviar</button>
             </div>
+          </form>
           </div>
         </div>
       </div>
