--- a/index.html
+++ b/index.html
@@ -57,7 +57,7 @@
               <label for="nome">Nome:</label>
               <input type="text" id="nome" class="form form-control form-control-md" required placeholder="digite seu nome">
               <label for="email">Email:</label>
-              <input type="text" id="email" class="form form-control form-control-md" required placeholder="seuemail@email.com">
+              <input type="email" id="email" class="form form-control form-control-md" required placeholder="seuemail@email.com">
               <label for="telefone">Telefone:</label>
               <input type="text" id="telefone" class="form form-control form-control-md" required placeholder="(XX)XXXX-XXXX">
             </div>
