--- a/index.html
+++ b/index.html
@@ -57,7 +57,7 @@
                     <input type="text" id="editar_telefone" class="form form-control form-control-md" required placeholder="(XX)XXXX-XXXX">
                   
                     <br>
-                    <button type="button" class="btn btn-primary">Enviar</button>
+                    <button  class="btn btn-primary">Enviar</button>
                     <button type="button" id="editar_cancelar" class="btn btn-light">Cancelar</button>
                   </form>
             </div>
